<resources>
    <string name="Please_select_location_by_holding_down_finger_on_map">Plase select location by holding down finger on the map.</string>
    <string name="you_reachecd_your_working_destination">You reached your work destination! Start working now!</string>
    <string name="about">About</string>
    <string name="about_locawork">About Locawork</string>
    <string name="action_settings">Settings</string>
    <string name="add_job">Add work</string>
    <string name="all_work">All work</string>
    <string name="app_name">Locawork</string>
    <string name="facebook_app_id" translatable="false">436034077547657</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb436034077547657</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="applyer_contact">Applyer contact:</string>
    <string name="applyer_email">Applyer email:</string>
    <string name="are_you_sure_you_want_to_delete_this_job">Are you sure you want to delete this work</string>
    <string name="ask_permission_before_deling_a_job">Ask permission before deleting a work</string>
    <string name="available_work">Available work</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cannot_fetch_current_location">Cannot fetch current location</string>
    <string name="cant_go">Can not go</string>
    <string name="ceo">CEO</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="client_secret" translatable="false">n9GTbIO9Q2jHXLUXkNbHYr2z</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="corona_alert">COVID information!</string>
    <string name="corona_description">To help to prevent a risk of coronavirus infection please wear a mask if you attend to job! This is a very serious problem and hopefully normal approaches can soon be established!</string>
    <string name="deactivate_account">Remove ads</string>
    <string name="default_notification_channel_id" translatable="false">default-channel-id</string>
    <string name="delete">Delete</string>
    <string name="delete_failue">Work deleting failure</string>
    <string name="description">Description..</string>
    <string name="description_of_a_problem">Description of a problem</string>
    <string name="deveopers">Developers</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="dont_show_information_in_startup">Don\'t show information on startup</string>
    <string name="earned">Earned:</string>
    <string name="edit_job">Edit work</string>
    <string name="email_label">Email</string>
    <string name="end">End:</string>
    <string name="error">Error!</string>
    <string name="fab_transformation_scrim_behavior" translatable="false">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior" translatable="false">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="filters">Filters</string>
    <string name="locawork">Locawork</string>
    <string name="locawork_mail">andreasplado@gmail.com</string>
    <string name="locawork_slogan">Locate, click apply and go to help!</string>
    <string name="getting_jobs">Getting work</string>
    <string name="go">Go</string>
    <string name="google_maps_key" translatable="false">AIzaSyDxMp6Y2Hg7KW5RFm5fXrGuNWBN6aN1Elc</string>
    <string name="ad_mob_key" translatable="false">ca-app-pub-7811023704360430/5598944137</string>
    <string name="gps_is_turned_off">GPS is turned off</string>
    <string name="hide_bottom_view_on_scroll_behavior" translatable="false">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_we_can_contact_you">How we can contact you?</string>
    <string name="job_description">Work description</string>
    <string name="job_description_is_loading">Work description is loading…</string>
    <string name="job_end_time">Work end time</string>
    <string name="job_item_title">Your title:</string>
    <string name="job_salary">Work salary</string>
    <string name="job_starting_time">Work starting time</string>
    <string name="job_title">Work title</string>
    <string name="n_jobs_was_found_for_working">%1$d jobs was found for working</string>
    <string name="you_have_posted_n_jobs">You have posted %1$d jobs</string>
    <string name="km">km</string>
    <string name="licence">Licence</string>
    <string name="website_link">Visit us in &lt;a href="" title=\"Locawork.ee\" style=color: #8c8987&gt;Locawork&lt;&lt;/a&gt;</string>
    <string name="privacy_policy_link">Read more about privacy policy &lt;a href=\"" title=\"Privacy policy\" style=color: #8c8987&gt;privacy policy&lt;&lt;/a&gt;</string>
    <string name="licence_content">Icons made by &lt;a href=\"https://www.flaticon.com/authors/freepik\" title=\"Freepik\" style=color: #8c8987&gt;Freepik&lt;/a&gt; from &lt;a href=\"https://www.flaticon.com/\" title=\"Flaticon\" style=color: #8c8987&gt; www.flaticon.com&lt;/a&gt; &lt;/br&gt; &lt;a href=\"https://stories.freepik.com/data\" style=color: #8c8987&gt;Illustration by Freepik Stories&lt;/a&gt; &lt;/br&gt; &lt;a href=\"https://stories.freepik.com/business\" style=color: #8c8987&gt;Illustration by Freepik Stories&lt;/a&gt; &lt;/br&gt; &lt;a href=\"https://stories.freepik.com/data\" style=color: #8c8987&gt;Illustration by Freepik Stories&lt;/a&gt;</string>
    <string name="loading_applyer_contact">Loading applyer contact...</string>
    <string name="loading_applyer_email">Loading applyer email…</string>
    <string name="loading_job_candidate">Loading work candidate…</string>
    <string name="loading_job_description">Loading work description....</string>
    <string name="loading_job_location">Loading work location…</string>
    <string name="loading_jobs_number">Loading work number</string>
    <string name="loading_jobs_title">Loading work title…</string>
    <string name="loading_licence">Loading licence…</string>
    <string name="loading_lobs">Loading work…</string>
    <string name="loading_your_provided_contact">Loading your provided contact…</string>
    <string name="location">Location</string>
    <string name="location_label">Location</string>
    <string name="log_out">Log out</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="marketer">Marketer</string>
    <string name="menu_account">Account</string>
    <string name="menu_add_job">Add work</string>
    <string name="menu_navigate">Navigate</string>
    <string name="menu_my_added_jobs">My added work</string>
    <string name="menu_my_applications">My applications</string>
    <string name="menu_my_done_work">My done work</string>
    <string name="message">Message</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="multiple_jobs_found">Multiple work was found</string>
    <string name="my_account">My Account</string>
    <string name="my_added_jobs">My added work</string>
    <string name="my_candidates">My candidates</string>
    <string name="my_done_work">My done work</string>
    <string name="my_provided_contact">My provided contact:</string>
    <string name="my_upcoming_work">My upcoming work</string>
    <string name="name_label">Name</string>
    <string name="name_of_the_ceo">Andreas Plado</string>
    <string name="name_of_the_marketer">Andreas Plado</string>
    <string name="names_of_the_developers">Andreas Plado</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Undefinded email</string>
    <string name="nav_header_title">Undefined user</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="network_connection_failed">Network connection failed.</string>
    <string name="no_gps_error_title">GPS Error</string>
    <string name="no_job_salary">No work salary…</string>
    <string name="no_job_selected">No work selected…</string>
    <string name="no_jobs_found">No work found</string>
    <string name="no_location_fetched">No location fetched</string>
    <string name="notification">Notification</string>
    <string name="oops">Oops!</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye" translatable="false">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through" translatable="false">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible" translatable="false">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through" translatable="false">M3.27,4.27 L19.74,20.74</string>
    <string name="phone_number_missing">Phone number missing</string>
    <string name="please_allow_requested_permissions">Please allow requested permissions first.</string>
    <string name="please_fill_in_all_data">Please fill in all data</string>
    <string name="please_tell_us_why_you_cant_go_to_job">Please tell us why you can\'t go to work?</string>
    <string name="report">Report</string>
    <string name="title">Title</string>
    <string name="work_offer">Work offer</string>
    <string name="work_seeker">Work seeker</string>
    <string name="work_title">Work Title</string>
    <string name="work_description">Work description</string>
    <string name="register_locawork_account">Register Locawork account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="contact">Contact</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fullname">Fullname</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="access_denied_cannot_process_further">Acccess denied cannot process further.</string>
    <string name="register">Register</string>
    <string name="please_allow_camera_to_use_this_application">Allow camera to use this application</string>
    <string name="allow_camera">Allow camera</string>
    <string name="subscribe">Subscribe</string>
    <string name="store">Store</string>
    <string name="start_work">Start work</string>
    <string name="end_work">End work</string>
    <string name="company_name">Company name</string>
    <string name="company_registration_number">Company registration number</string>
    <string name="i_also_want_to_offer_work">I also want to offer work</string>
    <string name="id_code">ID code</string>
    <string name="login">Login</string>
    <string name="website">Website</string>
</resources>