<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySuccessfullyStartWork"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="50dp"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/start_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_work"/>

    <Button
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:id="@+id/end_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_work"/>
</LinearLayout>